--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@cedarstudios/react-cedarmaps": "^1.0.3",
-    "@fortawesome/react-fontawesome": "^0.1.8",
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.43",
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "google-map-react": "^1.1.5",
@@ -24,6 +25,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.1",
     "react-redux": "^7.1.3",
