--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@cedarstudios/react-cedarmaps": "^1.0.3",
-    "@coreui/coreui": "^2.1.16",
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
@@ -16,30 +14,22 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "google-map-react": "^1.1.5",
-    "i18next": "^19.1.0",
-    "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
-    "react-i18next": "^11.3.1",
-    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.4.1",
-    "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
     "style-loader": "^1.1.2",
     "validator": "^12.1.0",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "lodash": "latest",
+    "react-items-carousel": "latest"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development ",
@@ -71,6 +61,7 @@
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "react-items-carousel": "latest"
   }
 }
