--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "react-items-carousel": "latest",
+    "react-multi-carousel": "^2.5.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "react-items-carousel": "latest"
+    "webpack-cli": "^3.3.10"
   }
 }
